--- a/city-register/pom.xml
+++ b/city-register/pom.xml
@@ -31,6 +31,7 @@
                 <version>2.2</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <outputDirectory>C:\Program Files\Apache Software Foundation\Tomcat 9.0\webapps</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
